--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747600.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/10/79ff06da6dcd41345adb65651dfc55e2-320x200.jpg">【2019盘点】中共监控之十大黑科技</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757478.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_2212-320x200.jpeg">港人感佩法轮功传真相 恭祝李大师新年好</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
@@ -31,8 +31,8 @@
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756804.md#1">【翻墙必看】新年之际武汉惊传SARS疫情</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747600.md#1">【2019盘点】中共监控之十大黑科技</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757604.md#1">【直播回放】新年前夜港人“和你 Shop”</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757478.md#1">港人向法轮功团体致歉 恭祝李大师新年好</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757250.md#1">南水北调运行5年 中共为何拟建后续工程？</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757201.md#1">香港学者：武汉疫情严重性与SARS相当</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756796.md#1">华为子公司高层大换血 接任者身份神秘</a><br>
